force-app/main/default/objects/Exl_Exclusion__c/Exl_Exclusion__c.object-meta.xml
<CustomObject>
    <description>This object serves as the authoritative source for all patron-related restrictions and exclusions.</description>
    <label>Exclusion</label>
    <nameField>
        <displayFormat>1{00000}</displayFormat>
        <label>Exclusion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>