force-app/main/default/objects/Exl_Exclusion__c/fields/Apply_Case_NextButton_NSW__c.field-meta.xml
<CustomField>
    <fullName>Apply_Case_NextButton_NSW__c</fullName>
    <description>NSW Next Button value from the related Apply Case. Used to filter the Update Exclusion Delivery Details list view.</description>
    <formula>ApplyCase__r.Exl_Nextbutton_NSW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Case Next Button (NSW)</label>
    <type>Text</type>
</CustomField>