force-app/main/default/objects/Exl_Exclusion__c/fields/Apply_Case_NextButton_Qld__c.field-meta.xml
<CustomField>
    <fullName>Apply_Case_NextButton_Qld__c</fullName>
    <description>QLD Next Button value from the related Apply Case. Used to filter the Update Exclusion Delivery Details list view.</description>
    <formula>ApplyCase__r.Exl_Nextbutton_Qld__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Case Next Button (QLD)</label>
    <type>Text</type>
</CustomField>