force-app/main/default/objects/Exl_Exclusion__c/fields/ApplyCase__c.field-meta.xml
<CustomField>
    <fullName>ApplyCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original case that triggered this exclusion</description>
    <label>Apply Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Exclusions</relationshipLabel>
    <relationshipName>Exclusions_Apply</relationshipName>
    <type>Lookup</type>
</CustomField>