force-app/main/default/objects/Exl_Exclusion__c/fields/Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Behaviour__c</fullName>
    <description>Behaviour leading to exclusion</description>
    <label>Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour</fullName>
            </value>
            <value>
                <fullName>Cheating</fullName>
            </value>
            <value>
                <fullName>CLAGCA Ban</fullName>
            </value>
            <value>
                <fullName>CLAGCA Exclusion</fullName>
            </value>
            <value>
                <fullName>Exec. Exclusion Comm</fullName>
            </value>
            <value>
                <fullName>External-External</fullName>
            </value>
            <value>
                <fullName>Gaming Incident</fullName>
            </value>
            <value>
                <fullName>Illegal/Undesirable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Problem-Responsible Gaming</fullName>
            </value>
            <value>
                <fullName>Responsible Gaming</fullName>
            </value>
            <value>
                <fullName>RSA Non Vol Accord</fullName>
            </value>
            <value>
                <fullName>RSA Non Vol Casino</fullName>
            </value>
            <value>
                <fullName>Section 81</fullName>
            </value>
            <value>
                <fullName>Self- Voluntary Exclusion</fullName>
            </value>
            <value>
                <fullName>Self-Liquor Exclusion</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Unattended Children</fullName>
            </value>
            <value>
                <fullName>Venue-AML</fullName>
            </value>
            <value>
                <fullName>Venue-Behaviour</fullName>
            </value>
            <value>
                <fullName>Venue-Cheating</fullName>
            </value>
            <value>
                <fullName>Venue-Exec. ExclusionCommittee</fullName>
            </value>
            <value>
                <fullName>Venue-Gaming Incident</fullName>
            </value>
            <value>
                <fullName>Venue-Gamng-Dishonest Act</fullName>
            </value>
            <value>
                <fullName>Venue-Illegal/Undesirable</fullName>
            </value>
            <value>
                <fullName>Venue-Other</fullName>
            </value>
            <value>
                <fullName>Venue-Police Direction Sect 81</fullName>
            </value>
            <value>
                <fullName>Venue-Theft</fullName>
            </value>
            <value>
                <fullName>Venue-Unattended Children</fullName>
            </value>
            <value>
                <fullName>Venue-Unlawful Conduct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>