force-app/main/default/objects/Exl_Exclusion__c/fields/Case_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Opened_Date__c</fullName>
    <description>Opened date of the related Apply Case. Used by the Update Exclusion Delivery Details list view.</description>
    <formula>DATEVALUE(ApplyCase__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Opened Date</label>
    <type>Date</type>
</CustomField>