force-app/main/default/objects/Exl_Exclusion__c/fields/CID_Exclusion_ID__c.field-meta.xml
<CustomField>
    <fullName>CID_Exclusion_ID__c</fullName>
    <description>Only used for migrated data</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Exclusion Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>