force-app/main/default/objects/Exl_Exclusion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related patron</description>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exclusions</relationshipLabel>
    <relationshipName>Exclusions</relationshipName>
    <type>Lookup</type>
</CustomField>