force-app/main/default/objects/Exl_Exclusion__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the exclusion ends</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>