force-app/main/default/objects/Exl_Exclusion__c/fields/Exclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Date__c</fullName>
    <formula>DATEVALUE( Start_Date__c )</formula>
    <label>Exclusion Date</label>
    <type>Date</type>
</CustomField>