force-app/main/default/objects/Exl_Exclusion__c/fields/Exl_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Exl_Delivery_Method__c</fullName>
    <description>Specifies the delivery method used when performing the ‘Issue Exclusion Document’ step.
Options include Onsite, Mail, or Amend.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>