force-app/main/default/objects/Exl_Exclusion__c/fields/Exl_Previously_Excluded_Qld__c.field-meta.xml
<CustomField>
    <fullName>Exl_Previously_Excluded_Qld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Excluded Qld</label>
    <type>Checkbox</type>
</CustomField>