force-app/main/default/objects/Exl_Exclusion__c/fields/Exl_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Exl_Revoked__c</fullName>
    <formula>IF(TEXT(Status__c) = &quot;Revoked&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revoked</label>
    <type>Text</type>
</CustomField>