force-app/main/default/objects/Exl_Exclusion__c/fields/Handed_To_Patron_Date__c.field-meta.xml
<CustomField>
    <fullName>Handed_To_Patron_Date__c</fullName>
    <description>When notice was delivered in person</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Handed to Patron</label>
    <type>Date</type>
</CustomField>