force-app/main/default/objects/Exl_Exclusion__c/fields/Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date__c</fullName>
    <description>When documents were handed over</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Date</label>
    <type>Date</type>
</CustomField>