force-app/main/default/objects/Exl_Exclusion__c/fields/HandOver_Status__c.field-meta.xml
<CustomField>
    <fullName>HandOver_Status__c</fullName>
    <description>Delivery final state</description>
    <label>Handover Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned to Sender</fullName>
            </value>
            <value>
                <fullName>Confirmed by AusPost</fullName>
            </value>
            <value>
                <fullName>Handed to Patron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>