force-app/main/default/objects/Exl_Exclusion__c/fields/Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether interpreter was involved</description>
    <label>Interpreter</label>
    <type>Checkbox</type>
</CustomField>