force-app/main/default/objects/Exl_Exclusion__c/fields/Interpreter_Name__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Name__c</fullName>
    <description>Interpreter’s full name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interpreter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>