force-app/main/default/objects/Exl_Exclusion__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who processed exclusion</description>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exclusions</relationshipName>
    <type>Lookup</type>
</CustomField>