force-app/main/default/objects/Exl_Exclusion__c/fields/Issued_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Issued_By_Employee__c</fullName>
    <description>Legacy employee number for Issued By, migrated from CID. Not populated for new exclusions created in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issued By Employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>