force-app/main/default/objects/Exl_Exclusion__c/fields/Issued_By_Licence__c.field-meta.xml
<CustomField>
    <fullName>Issued_By_Licence__c</fullName>
    <description>Captures the issuer’s licence number printed on exclusion forms. Applies to both NSW &amp; QLD (one per record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuer Licence Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>