force-app/main/default/objects/Exl_Exclusion__c/fields/Issuing_Property__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Property__c</fullName>
    <description>Property in which the Exclusion is issued from</description>
    <label>Issuing Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Star Sydney</fullName>
            </value>
            <value>
                <fullName>The Star Brisbane</fullName>
            </value>
            <value>
                <fullName>The Star Gold Coast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>