force-app/main/default/objects/Exl_Exclusion__c/fields/Must_Hand_Deliver__c.field-meta.xml
<CustomField>
    <fullName>Must_Hand_Deliver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for personal delivery</description>
    <label>Must Hand Deliver</label>
    <type>Checkbox</type>
</CustomField>