force-app/main/default/objects/Exl_Exclusion__c/fields/Next_Retry_At_PE__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_At_PE__c</fullName>
    <description>Enables a controlled retry mechanism for the PE service to resend notifications to downstream systems (Azure) in the event of a failure.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Retry At : PE</label>
    <type>DateTime</type>
</CustomField>