force-app/main/default/objects/Exl_Exclusion__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Source of the Exclusion</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safer Gambling</fullName>
            </value>
            <value>
                <fullName>Crown</fullName>
            </value>
            <value>
                <fullName>Police Exclusion</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>The Reef (Qld)</fullName>
            </value>
            <value>
                <fullName>The Ville (Qld)</fullName>
            </value>
            <value>
                <fullName>Asset Protection</fullName>
            </value>
            <value>
                <fullName>Reg Affairs</fullName>
            </value>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>NICC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>