force-app/main/default/objects/Exl_Exclusion__c/fields/Patron_No_Copy__c.field-meta.xml
<CustomField>
    <fullName>Patron_No_Copy__c</fullName>
    <formula>Contact__r.Patron_ID__c</formula>
    <label>PTN</label>
    <type>Text</type>
</CustomField>