force-app/main/default/objects/Exl_Exclusion__c/fields/PatronNumber__c.field-meta.xml
<CustomField>
    <fullName>PatronNumber__c</fullName>
    <description>Patron Number at the time of exclusion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Historical Patron No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>