force-app/main/default/objects/Exl_Exclusion__c/fields/PE_Counter__c.field-meta.xml
<CustomField>
    <fullName>PE_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the number of Platform Event publish attempts, with a maximum of three allowed.</description>
    <label>PE Counter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>