force-app/main/default/objects/Exl_Exclusion__c/fields/POE_Area__c.field-meta.xml
<CustomField>
    <fullName>POE_Area__c</fullName>
    <description>Area of incident</description>
    <label>POE Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entire Property</fullName>
            </value>
            <value>
                <fullName>CCA, Wagering &amp; Keno</fullName>
            </value>
            <value>
                <fullName>Casino Licensed Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>