force-app/main/default/objects/Exl_Exclusion__c/fields/POE_From__c.field-meta.xml
<CustomField>
    <fullName>POE_From__c</fullName>
    <description>Replicated venue(s)</description>
    <label>POE From</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Star Sydney</fullName>
            </value>
            <value>
                <fullName>The Star Brisbane</fullName>
            </value>
            <value>
                <fullName>The Star Gold Coast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>