force-app/main/default/objects/Exl_Exclusion__c/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <description>Type of exclusion</description>
    <label>POE Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Exclusion - Group Wide</fullName>
            </value>
            <value>
                <fullName>Problem Gambling - Group Wide</fullName>
            </value>
            <value>
                <fullName>Problem Gambling - NSW</fullName>
            </value>
            <value>
                <fullName>Problem Gambling - QLD</fullName>
            </value>
            <value>
                <fullName>Self Exclusion - Group Wide</fullName>
            </value>
            <value>
                <fullName>Self Exclusion - NSW</fullName>
            </value>
            <value>
                <fullName>Self Exclusion - QLD</fullName>
            </value>
            <value>
                <fullName>TP24HR</fullName>
            </value>
            <value>
                <fullName>TP7DAY</fullName>
            </value>
            <value>
                <fullName>Venue - Group Wide</fullName>
            </value>
            <value>
                <fullName>WOL - Property - Group Wide</fullName>
            </value>
            <value>
                <fullName>Interstate - CCA</fullName>
            </value>
            <value>
                <fullName>Interstate – CCA</fullName>
                <isActive>false</isActive>
                <label>Interstate – CCA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>