force-app/main/default/objects/Exl_Exclusion__c/fields/POE_Under__c.field-meta.xml
<CustomField>
    <fullName>POE_Under__c</fullName>
    <description>Legal regulation</description>
    <label>POE Under</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Section 91O</fullName>
            </value>
            <value>
                <fullName>Section 92</fullName>
            </value>
            <value>
                <fullName>Section 93A</fullName>
            </value>
            <value>
                <fullName>Section 94</fullName>
            </value>
            <value>
                <fullName>Section 95</fullName>
            </value>
            <value>
                <fullName>NSW Section 81</fullName>
            </value>
            <value>
                <fullName>ICM 13</fullName>
            </value>
            <value>
                <fullName>ICM P</fullName>
            </value>
            <value>
                <fullName>Section 79</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>