force-app/main/default/objects/Exl_Exclusion__c/fields/RecalculateDLRS__c.field-meta.xml
<CustomField>
    <fullName>RecalculateDLRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RecalculateDLRS</label>
    <type>Checkbox</type>
</CustomField>