force-app/main/default/objects/Exl_Exclusion__c/fields/Returned_to_Sender__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returned mail flag</description>
    <label>Returned to Sender</label>
    <type>Checkbox</type>
</CustomField>