force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Date__c</fullName>
    <description>The date the exclusion is revoked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Date</label>
    <type>Date</type>
</CustomField>