force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Delivery_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Delivery Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>