force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Delivery_Status__c</fullName>
    <label>Revocation Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Resent</fullName>
            </value>
            <value>
                <fullName>Requires Hand Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered Successfully</fullName>
            </value>
            <value>
                <fullName>Handed Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>