force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Processed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Processed Date</label>
    <type>Date</type>
</CustomField>