force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason__c</fullName>
    <description>Revocation justification</description>
    <label>Revocation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval from RDC</fullName>
            </value>
            <value>
                <fullName>Expiry without re-entries</fullName>
            </value>
            <value>
                <fullName>QCAT</fullName>
            </value>
            <value>
                <fullName>QLD 24 hour Cooling off period</fullName>
            </value>
            <value>
                <fullName>Police Direction</fullName>
            </value>
            <value>
                <fullName>Approved by MLRO</fullName>
            </value>
            <value>
                <fullName>Created in error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>