force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason_Other__c</fullName>
    <description>Free-text justification if Revocation Reason = Other</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reason Other</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>