force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reminder__c</fullName>
    <description>Review trigger before expiration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reminder Date</label>
    <type>Date</type>
</CustomField>