force-app/main/default/objects/Exl_Exclusion__c/fields/Revocation_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>