force-app/main/default/objects/Exl_Exclusion__c/fields/RevokeCase__c.field-meta.xml
<CustomField>
    <fullName>RevokeCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case  which triggered this revocation</description>
    <label>Revoke Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Exclusions (Revoke Case)</relationshipLabel>
    <relationshipName>Exclusions_Revoke</relationshipName>
    <type>Lookup</type>
</CustomField>