force-app/main/default/objects/Exl_Exclusion__c/fields/Revoked_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Revoked_By_Employee__c</fullName>
    <description>Legacy employee number for Revoked By, migrated from CID. Not populated for new exclusions created in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revoked By Employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>