force-app/main/default/objects/Exl_Exclusion__c/fields/Revoked_By_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Revoked_By_License_Number__c</fullName>
    <description>Captures the Revoke licence number printed on exclusion forms. Applies to both NSW &amp; QLD (one per record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revoked By License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>