force-app/main/default/objects/Exl_Exclusion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of exclusion restriction</description>
    <label>Restriction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Exclusion Draft</fullName>
            </value>
            <value>
                <fullName>Revocation Draft</fullName>
            </value>
            <value>
                <fullName>Activation Failed</fullName>
            </value>
            <value>
                <fullName>Revocation Failed</fullName>
            </value>
            <value>
                <fullName>Exclusion Pending</fullName>
            </value>
            <value>
                <fullName>Revocation Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>