force-app/main/default/objects/Exl_Exclusion__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Delivery tracking code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>