force-app/main/default/objects/Exl_Exclusion__c/fields/Voluntary__c.field-meta.xml
<CustomField>
    <fullName>Voluntary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the exclusion is voluntary</description>
    <label>Voluntary</label>
    <type>Checkbox</type>
</CustomField>