force-app/main/default/objects/Exl_Exclusion__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Witness assigned</description>
    <label>Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WitnessExclusions</relationshipName>
    <type>Lookup</type>
</CustomField>