force-app/main/default/objects/Exl_Exclusion__c/fields/Witness_Employee__c.field-meta.xml
<CustomField>
    <fullName>Witness_Employee__c</fullName>
    <description>Legacy employee number for Witness, migrated from CID. Not populated for new exclusions created in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Witness Employee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>