force-app/main/default/objects/Exl_Exclusion__c/fields/Witness_License__c.field-meta.xml
<CustomField>
    <fullName>Witness_License__c</fullName>
    <description>Captures the witness’s licence number printed on exclusion forms. Applies to both NSW &amp; QLD (one per record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Witness License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>