force-app/main/default/objects/Exl_Exclusion__c/recordTypes/Exl_Exclusions.recordType-meta.xml
<RecordType>
    <fullName>Exl_Exclusions</fullName>
    <active>true</active>
    <description>Used to support all Exclusion processes for prevention of play framework</description>
    <label>Exl Exclusions</label>
</RecordType>